--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,5 +1,6 @@
 html {
   font-size: 62.5%;
+  overflow-x:hidden;
 }
 
 body {
@@ -13,8 +14,4 @@ button {
 
 button:disabled {
   cursor: default;
-}
-
-.is-active {
-  font-weight: bold;
 }
